# bellboy

./: Cargo.toml  README.md  commitlist  concepts.md  deny.toml  repo_example.toml  starter_example.toml  template_example.kdl  template_example.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_pr.yml  security_audit.yml
docs/contributor-book/: book.toml
docs/contributor-book/src/: SUMMARY.md  license-why-gpl-3.0.md  release-checklist.md  welcome.md
docs/user-guide/: book.toml
docs/user-guide/src/: SUMMARY.md  introduction.md
src/: cli.rs  git.rs  main.rs
