[package]
authors = ["Capisco maintainers <https://github.com/capisco-dotfiles/capisco/graphs/contributors>"]
# NOTE: Keep this tagline in sync with the CLI "about" text and the package description in the
# top-level `Cargo.toml` file of this repo.
description = "A cross-platform repo manager that understands you."
edition = "2021"
homepage = "https://github.com/ErichDonGubler/capisco"
license = "GPL-3.0"
name = "capisco"
rust-version = "1.56"
version = "0.1.0-pre"

[dependencies]
anyhow = "1.0.42"
clap = { version = "3.0.0", features = ["derive", "wrap_help"] }
colog = "1.1"
directories = "4.0.1"
dunce = "1.0.2"
format = "0.2.4"
lifetime = { version = "0.1.0", features = ["macros"] }
log = "0.4.14"
path-clean = "0.1.0"
path-dsl = "0.6.1"
remove_dir_all = "0.7.0"
same-file = "1.0.6"
serde = { version = "1.0.128", features = ["derive"] }
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.26"
toml = { version = "0.5.8" }
unicase = "2.6.0"
url = "2.2.2"
