[package]
authors = ["Bellboy maintainers <https://github.com/bellboy-dotfiles/bellboy/graphs/contributors>"]
description = "A binary for managing dotfiles cross-platform. Take your dotfiles wherever you go!"
edition = "2021"
homepage = "https://github.com/bellboy-dotfiles/bellboy"
license = "GPL-3.0"
name = "bellboy"
rust-version = "1.64.0"
version = "0.1.0-pre"

[dependencies]
anyhow = "1.0.42"
clap = { version = "4", features = ["derive", "wrap_help"] }
colog = "1.1"
directories = "4.0.1"
dunce = "1.0.2"
format = "0.2.4"
lifetime = { version = "0.1.0", features = ["macros"] }
log = "0.4.14"
path-clean = "0.1.0"
path-dsl = "0.6.1"
remove_dir_all = "0.8.0"
same-file = "1.0.6"
serde = { version = "1.0.128", features = ["derive"] }
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.26"
toml = { version = "0.5.8" }
unicase = "2.6.0"
url = "2.2.2"
